--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,7 @@ author:
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
+  telegram         : "nata_samoylenko"
   tumblr           :
   twitter          : "natenka_says"
   vine             :
