--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,12 @@
 main:
   - title: "Blog"
     url: /blog/
-  - title: "Мои проекты"
-    url: /projects/
   - title: "Курс PyNEng"
     url: /pyneng-online/
+  - title: "График курсов"
+    url: /schedule/
+  - title: "Мои проекты"
+    url: /projects/
   - title: "About"
     url: /about/
   # - title: "Sample Posts"
