--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -43,7 +43,7 @@ links:
     children:
       - title: Non-tech books
         url: https://natenka.github.io/to-read-100/
-      - title: ToRead 2020
-        url: https://natenka.github.io/to-read-2020/
-      - title: ToDo 2020
-        url: https://natenka.github.io/todo-2020/
+      - title: ToRead 2021
+        url: https://natenka.github.io/to-read/
+      - title: ToDo 2021
+        url: https://natenka.github.io/todo-2021/
