move link to wishlist

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,3 +57,5 @@ links:
         url: https://natenka.github.io/to-read/
       - title: ToDo 2021
         url: https://natenka.github.io/todo-2021/
+      - title: Book Wishlist
+        url: https://www.amazon.com/hz/wishlist/ls/QCGBX64X40NQ?ref_=wl_share
