--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : " "
   location         :
-  email            : #"natasha.samoylenko@gmail.com"
+  email            :
   uri              :
   bitbucket        :
   codepen          :
