--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,4 +58,4 @@ links:
       - title: ToDo 2021
         url: https://natenka.github.io/todo-2021/
       - title: Book Wishlist
-        url: https://www.amazon.com/hz/wishlist/ls/QCGBX64X40NQ?ref_=wl_share
+        url: "https://www.amazon.com/hz/wishlist/ls/QCGBX64X40NQ?ref_=wl_share"
